[package]
name = "rs3a"
version = "0.2.3"
edition = "2018"
authors = ["DomesticMoth"]
description = "Lib for reading and writing 3a format"
repository = "https://github.com/DomesticMoth/rs3a"
categories = ["text-processing", "parser-implementations", "parsing"]
readme = "README.md"
license = "GPL-3.0"

[dependencies]
regex = "1"
